--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://chrstief.github.io/meta-frontend-developer-capstone",
+  "homepage":"https://chrstief.github.io/meta-frontend-developer-capstone",
   "name": "meta-frontend-developer-capstone",
   "version": "0.1.0",
   "private": true,
